<resources>
    <string name="app_name">MADLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tilgametitle_text">Title</string>
    <string name="tilplatform_text">Platform</string>
    <string name="tilyear_text">Year</string>
    <string name="tilmonth_text">Month</string>
    <string name="tilday_text">Day</string>
    <string name="delete_text">Delete</string>

    <string name="title_error">Please fill in a title</string>
    <string name="platform_error">Please fill in a gaming platform</string>
    <string name="date_error">Please fill in a date</string>
    <string name="invaliddate_error">Please fill in a valid date</string>
    <string name="deleted_game_message">Successfully deleted game</string>
    <string name="deleted_backlog_message">Successfully deleted backlog</string>
    <string name="undo_text">UNDO</string>
</resources>