<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context=".ui.AddGameFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@android:drawable/ic_menu_save"
        android:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilGameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etGameTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilgametitle_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPlatform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilGameTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPlatform"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilplatform_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tilMonth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilday_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMonth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/tilYear"
                app:layout_constraintStart_toEndOf="@id/tilDay"
                app:layout_constraintTop_toBottomOf="@id/tilPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilmonth_text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilYear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tilMonth"
                app:layout_constraintTop_toBottomOf="@id/tilPlatform">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tilyear_text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>